Added sounds for the keys

--- a/day1/assets/css/style.css
+++ b/day1/assets/css/style.css
@@ -29,6 +29,7 @@ body {
     color: white !important;
     font-size: 1.4rem;
     padding: 1rem;
+    transition: all .07s ease;
 }
 kbd {
     color: var(--yelow);
